--- a/mysite/myapp/templates/home.html
+++ b/mysite/myapp/templates/home.html
@@ -27,7 +27,7 @@
         }
         .container > img {
             height: 70%;
-            transform: translate(-12.5%, -19%);
+            transform: rotate(-90deg) translate(-12.5%, -19%);
         }
         .header .logo {
             vertical-align: middle;
