--- a/mysite/myapp/templates/Form.html
+++ b/mysite/myapp/templates/Form.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 <style>
     div{
-      padding: 20px;
+      padding: 40px;
       background: lavender;
     }
      h1 {
@@ -18,23 +18,23 @@
        padding: 10px;
        text-align: center;
      }
-
+    body, html{
+        height: 100%;
+    }
      form {
        background: white;
-       border: 2px solid #dedede;
-       display: flex;
-       flex-direction: column;
        justify-content: space-around;
        margin: 0 auto;
        padding: 30px 50px;
-       height: 60%;
+       height: 100%;
      }
 
      input, button{
        border: 1px solid #d9d9d9;
        border-radius: 4px;
        box-sizing: border-box;
-       padding: 10px;
+       padding: 30px;
+         height: 70px;
        width: 100%;
      }
 
@@ -45,17 +45,21 @@
        font-size: 35px;
        font-weight: 300;
      }
-
      h3{
          text-align: center;
-         font-size: 40px;
+         font-size: 70px;
      }
-     .submit{
-       color: #3d3d3d;
-       display: block;
-       font-family: sans-serif;
-       font-size: 35px;
-       font-weight: 300;
+     .submit > div{
+        color: #3d3d3d;
+        text-align: center;
+        display: block;
+        font-family: sans-serif;
+        font-size: 60px;
+        font-weight: 300;
+        background-color: lightgray;
+     }
+     a{
+        text-decoration: none;
      }
     </style>
     </head>
@@ -75,26 +79,26 @@
         <form action="" method="get" class="form-example">
             <div class="form-example">
             <label for="name">Enter your name: </label>
-            <input type="text" name="name" id="name" required />
+            <input type="text" name="name" id="name" />
           </div>
 
             <div class="form-example">
             <label for="email">Enter your email: </label>
-            <input type="email" name="email" id="email" required />
+            <input type="email" name="email" id="email" />
           </div>
 
           <div class="form-example">
             <label for="age">Enter your age: </label>
-            <input type="number" name="age" id="age" required />
+            <input type="number" name="age" id="age" />
           </div>
 
           <div class="form-example">
             <label for="phoneNumber">Enter your PhoneNumber: </label>
-            <input type="number" name="number" id="phoneNumber" required />
+            <input type="number" name="number" id="phoneNumber" />
           </div>
 
-          <div class="form-example">
-            <input type="submit" value="SUBMIT!" class="submit"/>
+        <div class="form-example">
+              <a class="submit" href="{% url 'Welcome' %}"><div>SUBMIT!</div></a>
           </div>
     </form>
 
